--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url = jdbc:postgresql://localhost:5432/mydb?useSSL=false
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username = koshika
+spring.datasource.password = koshika
+spring.jpa.generate-ddl = true
+spring.jpa.show-sql = true
+spring.jpa.hibernate,ddl-auto = update
+
+spring.jackson.deserialization.READ_ENUMS_USING_TO_STRING = true
 
