--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 spring.jpa.hibernate,ddl-auto = update
 
-
+#authentication properties
+TOKEN_PREFIX = Bearer
+HEADER_STRING = authorization
+ADD_EMP_URL = /api/employee
+TOKEN_SECRET = jf9i4jgu83nflo
