--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/leavetracker?useSSL=fal
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username = koshika
-spring.datasource.password = koshika
+spring.datasource.username = postgres
+spring.datasource.password = 123456
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 spring.jpa.hibernate,ddl-auto = update
