moved response model from controller to service classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 spring.jpa.hibernate,ddl-auto = update
 
-#authentication properties
-TOKEN_PREFIX = Bearer
+#authentication propertiesS
 HEADER_STRING = authorization
 ADD_EMP_URL = /api/employee
-TOKEN_SECRET = jf9i4jgu83nflo
+jwt.secret = jf9i4jgu83nflo
